# langchain_study2

./: .gitignore  README.md  pyproject.toml
INTRO_TO-VECTOR_DBS/: ingestion.py  main.py  retriver_pdf.py
code-interpreter/: main.py
document_helper/: ingestion.py  main.py
document_helper/backend/: core.py
