[project]
name = "langchain-study2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "black>=25.1.0",
    "faiss-cpu>=1.10.0",
    "langchain>=0.3.23",
    "langchain-chroma>=0.2.2",
    "langchain-community>=0.3.21",
    "langchain-experimental>=0.3.4",
    "langchain-google-genai>=2.1.3",
    "langchain-groq>=0.3.2",
    "langchain-ollama>=0.3.1",
    "langchainhub>=0.1.21",
    "ollama>=0.4.7",
    "pandas>=2.2.3",
    "pypdf>=5.4.0",
    "python-dotenv>=1.1.0",
    "qrcode>=8.1",
    "streamlit>=1.44.1",
    "streamlit-chat>=0.1.1",
    "tabulate>=0.9.0",
]
